; ModuleID = '/home/carl/AnghaBench/micropython/ports/stm32/extr_flash.c_flash_write.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/stm32/extr_flash.c_flash_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLASH_TYPEPROGRAM_WORD = common dso_local global i32 0, align 4
@HAL_OK = common dso_local global i64 0, align 8
@FLASH_TYPEPROGRAM_DOUBLEWORD = common dso_local global i32 0, align 4
@FLASH_TYPEPROGRAM_FLASHWORD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @flash_write(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %27, %3
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %30

12:                                               ; preds = %8
  %13 = load i32, i32* @FLASH_TYPEPROGRAM_WORD, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32*, i32** %5, align 8
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @HAL_FLASH_Program(i32 %13, i32 %14, i32 %16)
  %18 = load i64, i64* @HAL_OK, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %12
  %21 = call i32 (...) @HAL_FLASH_Lock()
  br label %32

22:                                               ; preds = %12
  %23 = load i32, i32* %4, align 4
  %24 = add nsw i32 %23, 4
  store i32 %24, i32* %4, align 4
  %25 = load i32*, i32** %5, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 1
  store i32* %26, i32** %5, align 8
  br label %27

27:                                               ; preds = %22
  %28 = load i32, i32* %7, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %7, align 4
  br label %8

30:                                               ; preds = %8
  %31 = call i32 (...) @HAL_FLASH_Lock()
  br label %32

32:                                               ; preds = %30, %20
  ret void
}

declare dso_local i64 @HAL_FLASH_Program(i32, i32, i32) #1

declare dso_local i32 @HAL_FLASH_Lock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
